
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_FAILURE ;
 int LM_ID_LDSO ;
 int RTLD_LAZY ;
 int dlclose (void*) ;
 char* dlerror () ;
 void* dlmopen (int ,int *,int ) ;
 void* dlsym (void*,char const*) ;
 int exit (int ) ;
 int fprintf (int ,char*,char*) ;
 int stderr ;

void *find_symbol(const char *symbol){
    void *handle,*addr;
    char *err;

    if((handle=dlmopen(LM_ID_LDSO,((void*)0),RTLD_LAZY))==((void*)0)){
        fprintf(stderr,"%s\n",dlerror());
        exit(EXIT_FAILURE);
    }

    dlerror();
    addr=dlsym(handle,symbol);
    if((err=dlerror())!=((void*)0)){
        fprintf(stderr,"%s\n",err);
        exit(EXIT_FAILURE);
    }

    dlclose(handle);

    return addr;
}
