; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/solaris/local/extr_2330.c_find_symbol.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/solaris/local/extr_2330.c_find_symbol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LM_ID_LDSO = common dso_local global i32 0, align 4
@RTLD_LAZY = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @find_symbol(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i32, i32* @LM_ID_LDSO, align 4
  %7 = load i32, i32* @RTLD_LAZY, align 4
  %8 = call i8* @dlmopen(i32 %6, i32* null, i32 %7)
  store i8* %8, i8** %3, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load i32, i32* @stderr, align 4
  %12 = call i8* (...) @dlerror()
  %13 = call i32 @fprintf(i32 %11, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %12)
  %14 = load i32, i32* @EXIT_FAILURE, align 4
  %15 = call i32 @exit(i32 %14) #3
  unreachable

16:                                               ; preds = %1
  %17 = call i8* (...) @dlerror()
  %18 = load i8*, i8** %3, align 8
  %19 = load i8*, i8** %2, align 8
  %20 = call i8* @dlsym(i8* %18, i8* %19)
  store i8* %20, i8** %4, align 8
  %21 = call i8* (...) @dlerror()
  store i8* %21, i8** %5, align 8
  %22 = icmp ne i8* %21, null
  br i1 %22, label %23, label %29

23:                                               ; preds = %16
  %24 = load i32, i32* @stderr, align 4
  %25 = load i8*, i8** %5, align 8
  %26 = call i32 @fprintf(i32 %24, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %25)
  %27 = load i32, i32* @EXIT_FAILURE, align 4
  %28 = call i32 @exit(i32 %27) #3
  unreachable

29:                                               ; preds = %16
  %30 = load i8*, i8** %3, align 8
  %31 = call i32 @dlclose(i8* %30)
  %32 = load i8*, i8** %4, align 8
  ret i8* %32
}

declare dso_local i8* @dlmopen(i32, i32*, i32) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i8* @dlerror(...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i8* @dlsym(i8*, i8*) #1

declare dso_local i32 @dlclose(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
